# mosp.evanchen.cc

./: .gitignore  .gitmodules  .ignore  .pre-commit-config.yml  CLAUDE.md  README.md  build-ts.sh  build.sh  generate.py  package-lock.json  package.json  prek.toml  pyproject.toml  requirements.txt  serve.py  tsconfig.json  tsconfig.puzzles.json  worker.sh
.github/workflows/: ci.yml  prek.yml
ancient/autograder/: A186428.py  key.py  requirements.txt  run_autograder  run_tests.py
data/: artwork.toml  extract.py  index.md  site.json
data/puzzles/K/: author-notes.md  content.md  solution.md  story.md
data/puzzles/data-connection/: content.md
data/puzzles/farml/: author-notes.md  content.md  solution.md  story.md
data/puzzles/gemstones/: content.md
data/puzzles/going-in-a-new-direction/: content.md
data/puzzles/hop-on-mop/: content.md
data/puzzles/kindergarten/: author-notes.md  content.md  solution.md  story.md
data/puzzles/lost-in-translation/: author-notes.md  content.md  (+3 more)
site/mock/: discord-client.html  zoom-client.html
site/static/: discord-client.html  images.js  noscript.css  style.css  unlock.js
src/: generate.ts  markdown.ts  types.ts
src/client/: grader.ts
src/templates/: chapter.ts  index.ts  layout.ts  puzzle.ts  solution.ts  vol.ts
static/: discord-client.html  style.css  unlock.js  zoom-client.html
templates/: 404.html  chapter.html  gallery.html  hints.html  index.html  layout.html  noscript.html  puzzle.html  solution.html  unlockable.html  vol.html
typescripts/: grader.ts  hints.ts  imgfullres.ts  set.ts  unlock.ts  zoom.ts
(+49 files in other folders)
