[project]
name = "mosp.evanchen.cc"
version = "1.0"
description = "Static archive of MOSP puzzle hunt"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "Evan Chen", email = "evan@evanchen.cc" }]
license = { text = "MIT" }
urls = { repository = "https://github.com/vEnhance/mosp.evanchen.cc" }
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
]

[tool.djlint]
profile = "jinja"
ignore = "J004,J018"

[tool.codespell]
ignore-words-list="GUD,Ans"

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "djlint>=1.36.4",
    "prek>=0.3.4",
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "watchdog>=6.0.0",
]
